Add chenges in html and css

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="container">
     <div class="footer-box">
       <div>
-        <img src="./images/myteam-logo.svg" width="160" height="40" alt="Site footer logo">
+        <img src="./images/myteam.svg" width="160" height="40" alt="Site footer logo">
         <div>
           <a  class="footer-box__link" href="#">
             home
