--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
     <div class="container">
       <div class="footer-box">
         <div>
+         <a href="./index.html">
           <img src="./images/myteam-logo.svg" width="160" height="40" alt="Site footer logo">
+         </a>
           <div>
             <a  class="footer-box__link" href="#">
               home
