--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <a href="./index.html" class="header-inner__list-link">home</a>
           </li>
           <li class="header-inner__list-item">
-            <a href="./about.html" class="header-inner__list-link">about</a>
+            <a href="#" class="header-inner__list-link">about</a>
           </li>
         </ul>
         <a class="header-inner__btn" href="#">contact us</a>
@@ -38,98 +38,16 @@
   <!-- SITE MAIN START -->
   <main class="site-main">
   <!-- Start Hero section-->
-    <section class="hero">
-      <div class="container">
-        <div class="banner">
-          <div class="banner__left">
-            <h1 class="banner__title">
-              Find the <br/> best <span> talent</span>
-            </h1>
-          </div>
-          <div class="banner__right">
-            <p class="banner__text">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
-          </div>
-        </div>
-      </div>
+    <section class="about-hero">
+   
     </section>
-<!-- End build section-->
-    <section class="build">
-      <div class="container">
-        <div class="build-inner">
-          <div class="build-inner__left">
-            <h2 class="build-inner__title" >Build & manage distributed teams like no one else.</h2>
-          </div>
-          <div class="build-inner__right">
-            <ul class="build-inner__list build-list">
-              <li class="build-list__item ">
-                <p class="build-list__title">Experienced Individuals</p>
-                <p class="build-list__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-              </li>
-              <li class="build-list__item ">
-                <p class="build-list__title">Experienced Individuals</p>
-                <p class="build-list__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-              </li>
-              <li class="build-list__item ">
-                <p class="build-list__title">Experienced Individuals</p>
-                <p class="build-list__text">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+        <!-- End directors section-->
+    <section class="about-directors">
+   
     </section>
-
-
-    <!-- End Samandar Stories section-->
-    <section class="site-stories-section">  
-        <div class="container">
-          <div class="stories-box">
-              <h2 class="stories-title">
-                Delivering real results for top <br> companies. Some of our 
-                <span class="stories-title__item">
-                  success stories.
-                </span> 
-              </h2>
-
-
-            <ul class="stories-box__list stories-list">
-              <li class="stories-list__item">
-                <p class="stories-list__text">
-                  “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”
-                </p>
-                <strong class="stories-list__person-name">
-                  Kady Baker
-                </strong>
-                <p class="stories-list__person-job">
-                  Product Manager at Bookmark
-                </p>
-              </li>
-              <li class="stories-list__item">
-                <p class="stories-list__text">
-                  “We needed to automate our entire onboarding process. The team came in and built out the whole journey. Since going live, user retention has gone through the roof!”
-                </p>
-                <strong class="stories-list__person-name">
-                  Aiysha Reese
-                </strong>
-                <p class="stories-list__person-job">
-                  Founder of Manage
-                </p>
-              </li>
-              <li class="stories-list__item">
-                <p class="stories-list__text">
-                  “Amazing. Our team helped us build an app that delivered a new experience for hiring a physio. The launch was an instant success with 100k downloads in the first month.”
-                </p>
-                <strong class="stories-list__person-name">
-                  Arthur Clarke
-                </strong>
-                <p class="stories-list__person-job">
-                  Co-founder of MyPhysio
-                </p>
-              </li>
-            </ul>
-
-          </div>
-        </div>
+        <!-- End some section-->
+    <section class="about-some">
+   
     </section>
     <!-- End Samandar Stories section-->
 
@@ -164,10 +82,10 @@
           <img src="./images/myteam-logo.svg" width="160" height="40" alt="Site footer logo">
          </a>
           <div>
-            <a  class="footer-box__link" href="./index.html">
+            <a  class="footer-box__link" href="#">
               home
             </a>
-            <a  class="footer-box__link" href="./about.html">
+            <a  class="footer-box__link" href="#">
               about
             </a>
           </div>     
