add about  hero section

--- a/about.html
+++ b/about.html
@@ -39,7 +39,18 @@
   <main class="site-main">
   <!-- Start Hero section-->
     <section class="about-hero">
-   
+      <div class="container">
+        <div class="banner">
+          <div class="banner__left banner__left--about">
+            <h2 class="banner__title banner__title--about">
+              About
+            </h2>
+          </div>
+          <div class="banner__right banner__right--about">
+            <p class="banner__text banner__text--about ">We help companies build dynamic teams made up of top global talent. Using our network of passionate professionals we drive innovation and deliver incredible outcomes. Talented, diverse teams shape the best products and experiences. We’ll bring those teams to you.</p>
+          </div>
+        </div>
+      </div>
     </section>
         <!-- End directors section-->
     <section class="about-directors">
