add about hero section end some section

--- a/about.html
+++ b/about.html
@@ -58,7 +58,36 @@
     </section>
         <!-- End some section-->
     <section class="about-some">
-   
+        <div class="container">
+          <div class="some-inner">
+            <h2 class="some-inner__title">Some of our clients</h2>
+            <ul class="some-inner__list">
+              <li class="some-inner__list-item">
+                <a href="#" class="some-inner__list-link">
+                  <img src="./images/theverge@2x.png" srcset="./images/theverge.png 1x, ./images/theverge@2x.png 2x" alt="theverge">
+                </a>
+              </li>
+              <li class="some-inner__list-item">
+                <a href="#" class="some-inner__list-link">
+                  <img src="./images/jakarta.png" srcset="./images/jakarta.png 1x, ./images/jakarta@2x.png 2x" alt="theverge">
+                </a>
+              </li>
+              <li class="some-inner__list-item">
+                <a href="#" class="some-inner__list-link">
+                  <img src="./images/thebuardian.png"  srcset="./images/thebuardian.png 1x, ./images/thebuardian@2x.png 2x" alt="theverge">
+                </a>
+              </li>
+              <li class="some-inner__list-item">
+                <a href="#" class="some-inner__list-link">
+                  <img src="./images/techradarx.png" srcset="./images/techradar.png 1x, ./images/techradar@2x.png 2x" alt="theverge">
+                </a>
+              </li>
+              <li class="some-inner__list-item">
+                <a href="#" class="some-inner__list-link">   <img src="./images/gadgets-now.png"  srcset="./images/gadgets-now.png 1x, ./images/gadgets-now@2x.png 2x" alt="theverge"></a>
+              </li>
+            </ul>
+          </div>  
+        </div>
     </section>
     <!-- End Samandar Stories section-->
 
