add contact page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <a href="#" class="header-inner__list-link">about</a>
           </li>
         </ul>
-        <a class="header-inner__btn" href="#">contact us</a>
+        <a class="header-inner__btn" href="./contact.html">contact us</a>
       </div>
     </div>
   </header>
@@ -392,7 +392,7 @@
           <p class="redy-box__title">
             Ready to get started?
           </p>
-          <a class="redy-link" href="#">
+          <a class="redy-link" href="./contact.html">
             contact us
           </a>
         </div>
