--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="./about.html" class="header-inner__list-link">about</a>
           </li>
         </ul>
-        <a class="header-inner__btn" href="#">contact us</a>
+        <a class="header-inner__btn" href="./contact.html">contact us</a>
       </div>
     </div>
   </header>
@@ -142,7 +142,7 @@
             <p class="redy-box__title">
               Ready to get started?
             </p>
-            <a class="redy-link" href="#">
+            <a class="redy-link" href="./contact.html">
               contact us
             </a>
           </div>
